--- a/stylesheet.css
+++ b/stylesheet.css
@@ -23,7 +23,7 @@ a {
 
 .top-wrapper {
   padding: 180px 0 100px 0;
-  background-image: url(https://prog-8.com/images/html/advanced/top_en.png);
+  background-image: url(https://https://www.canva.com/design/DAEZroi1cbE/rFanCW2JLQiSGvb66AjTNA/view?utm_content=DAEZroi1cbE&utm_campaign=designshare&utm_medium=link&utm_source=homepage_design_menu
   background-size: cover;
   color: white;
   text-align: center;
