--- a/stylesheet.css
+++ b/stylesheet.css
@@ -41,7 +41,7 @@ a {
   margin-bottom: 3px;
 }
 
-.btn-wrapper {
+.btn-wrapper 
   text-align: center;
   margin: 20px 0;
 }
@@ -59,7 +59,7 @@ a {
   margin-right: 10px;
 }
 
-.twitter {
+.twitter 
   background-color: #55acee;
 }
 
