--- a/stylesheet.css
+++ b/stylesheet.css
@@ -23,7 +23,7 @@ a {
 
 .top-wrapper {
   padding: 180px 0 100px 0;
-  background-image: url(https://https://www.canva.com/design/DAEZroi1cbE/rFanCW2JLQiSGvb66AjTNA/view?utm_content=DAEZroi1cbE&utm_campaign=designshare&utm_medium=link&utm_source=homepage_design_menu
+  background-image: url(https://images.app.goo.gl/J7gk65owvAdYwDjy9);
   background-size: cover;
   color: white;
   text-align: center;
@@ -41,7 +41,7 @@ a {
   margin-bottom: 3px;
 }
 
-.btn-wrapper 
+.btn-wrapper {
   text-align: center;
   margin: 20px 0;
 }
@@ -59,7 +59,7 @@ a {
   margin-right: 10px;
 }
 
-.twitter 
+.twitter {
   background-color: #55acee;
 }
 
