--- a/stylesheet.css
+++ b/stylesheet.css
@@ -23,7 +23,7 @@ a {
 
 .top-wrapper {
   padding: 180px 0 100px 0;
-  background-image: url(https://images.app.goo.gl/J7gk65owvAdYwDjy9);
+  background-image: url(https://pbs.twimg.com/media/ExTJRAqVIAAbRb5?format=jpg&name=small);
   background-size: cover;
   color: white;
   text-align: center;
